# ObEngine

./: CMakeLists.txt  README.md  imgui.ini
assets/shaders/: forward_3d.frag  forward_3d.frag.spv  forward_3d.vert  forward_3d.vert.spv  light_cull.comp  light_cull.comp.spv  shadow.frag  shadow.frag.spv  shadow.vert  shadow.vert.spv
includes/assets/: asset_manager.hpp
includes/engine/: engine.hpp  layer.hpp  layer_stack.hpp
includes/event/: engine_events.hpp  event.hpp  event_manager.hpp
includes/rhi/: renderer.hpp  vulkan_renderer.hpp
includes/scene/: Components.hpp  EditorCamera.hpp  Scene.hpp
includes/ui/: LayerManager.hpp  imgui_layer.hpp
includes/ui/editor/: editor_layer.hpp
includes/windowing/: glfw_window.hpp  window.hpp
src/assets/: asset_manager.cpp
src/core/engine/: engine.cpp
src/core/event/: event_manager.cpp
src/core/scene/: scene.cpp
src/core/window/: glfw_window.cpp  window_manager.cpp
src/rhi/vulkan/: Descriptors.cpp  GraphicsPipeline.cpp  LightData.cpp  Render.cpp  RenderPass.cpp  Swapchain.cpp  VulkanRenderer.cpp  shadows.cpp
src/ui/: LayerManager.cpp  imgui_layer.cpp
src/ui/editor/: editor_hierarchy_panel.cpp  editor_inspector.cpp  editor_layer.cpp
